feat: 新增进入无效源时的弹窗提示；解决修改字体后Notification字体不变的问题；